<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UpgradeApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">增加</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="ping">ping</string>
    <string name="infill_pkg_name">填入包名</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="add_item">增加Item</string>
    <string name="update_url">更新网址</string>
    <string name="update_url2">更新网址2</string>
    <string name="are_you_sure_del">确定删除码</string>
    <string name="process">处理</string>
    <string name="refresh">刷新</string>
    <string name="downloading">正在加载中&#8230;</string>
    <string name="no_description"></string>
    <string name="err_pkg_not_mach">与包名不匹配</string>
    <string name="err_parse_exception">转换错误</string>
    <string name="is_deleting">正在删除…</string>
    <string name="select_all">全选</string>
    <string name="deselect_all">取消</string>
    <string name="upload">上传</string>
    <string name="quick_action_download">下载</string>
    <string name="quick_action_share">分享</string>
    <string name="quick_action_push">推送到设备</string>
    <string name="quick_action_delete">删除</string>
    <string name="quick_action_move">移动</string>
    <string name="quick_action_more">更多</string>
    <string name="quick_action_rename">重命名</string>
    <string name="please_input_pkg_name">请输入包名</string>
    <string name="selected_file_to_edit">已选定%d个</string>

</resources>