<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/app_pkg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/infill_pkg_name"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/app_url_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:visibility="gone" />

        <EditText
            android:id="@+id/app_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/app_url_test"
            android:hint="@string/update_url"
            android:inputType="textUri" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/app_url2_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/no_description"
            android:visibility="gone" />

        <EditText
            android:id="@+id/app_url2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/app_url2_test"
            android:hint="@string/update_url2"
            android:inputType="textUri" />
    </RelativeLayout>

</LinearLayout>